--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+body{
+  max-width: 960px;
+  justify-content: center;
+  margin: auto;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
